# cseslib4py

./: README.md  pyproject.toml  requirements.txt
cses/: __init__.py  errors.py  structures.py  structures_v2.py  utils.py
cses/structures/: __init__.py  v1.py  v2.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  structs-v1.rst  structs-v2.rst
examples/: cses_example_v2.yaml
tests/: test_cses.py  test_today_schedule.py
