[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycses"
version = "0.1.1"
authors = [
    {name = "MacrosMeng", email = "meng-yc@outlook.com"},
]
description = "CSES access framework for Python, refactored by MacrosMeng."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accessible-pygments==0.0.5",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "commonmark==0.9.1",
    "h11==0.16.0",
    "idna==3.11",
    "Markdown==3.9",
    "MarkupSafe==3.0.3",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "PyYAML==6.0.3",
    "roman-numerals-py==3.1.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]

[project.optional-dependencies]
docs = [
    "alabaster==1.0.0",
    "babel==2.17.0",
    "colorama==0.4.6",
    "docutils==0.21.2",
    "furo==2025.9.25",
    "imagesize==1.4.1",
    "Jinja2==3.1.6",
    "packaging==25.0",
    "Pygments==2.19.2",
    "recommonmark==0.7.1",
    "requests==2.32.5",
    "snowballstemmer==3.0.1",
    "Sphinx==8.2.3",
    "sphinx-autobuild==2025.8.25",
    "sphinx-basic-ng==1.0.0b2",
    "sphinx-markdown-tables==0.0.17",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/MacroMeng/cseslib4py"
"Bug Reports" = "https://github.com/MacroMeng/cseslib4py/issues"
"Source" = "https://github.com/MacroMeng/cseslib4py"
"Documentation" = "https://cseslib4py.readthedocs.io/"


[tool.setuptools.packages.find]
where = ["."]
include = ["cses*"]
